# ChasseAuSanglier

./: .gitattributes  .gitignore  LICENSE  README-FR.md  README.md  app.py  create_zip.py  git_push.py  main.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: game.js
templates/: index.html
